--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+.orenge-highlight{
     color: orange;
 }
 .half-width{
@@ -23,6 +29,7 @@ h1{
 }
 section{
     height: 500px;
+    padding-bottom: 100px;
 }
 .link-button{
     text-decoration: none;
@@ -31,4 +38,42 @@ section{
     font-weight: 700;
     padding: 10Px 40px;
     border-radius: 5px;
+}
+.dream-area{
+    background: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experince{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+.experince-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid ;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#wordpress-deg{
+    border-left: 7px solid ;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+.ex-header{
+    margin-left: 67px;
+}
+footer p{
+    text-align: center;
+    color: white;
+}
+footer{
+    background-color: tomato;
+    height: 50px;
+    padding-top: 2px;
 }
